@@ -215,7 +215,7 @@ L["ICONMENU_DURATION_MIN_DESC"] = "Minimum duration needed to show the icon"
 L["ICONMENU_DURATION_MAX_DESC"] = "Maximum duration allowed to show the icon"
 
 L["CONDITION_TIMERS_HEADER"] = "Timers"
-L["CONDITION_TIMERS_SUCCEED_DESC"] = "Duration of timer to set on the icon when conditions succeeding"
+L["CONDITION_TIMERS_SUCCEED_DESC"] = "Duration of timer to set on the icon when conditions begin succeeding"
 L["CONDITION_TIMERS_FAIL_DESC"] = "Duration of timer to set on the icon when conditions begin failing"
 
 L["METAPANEL_TITLE"] = "Meta Icon Editor"
@@ -264,6 +264,7 @@ L["UIPANEL_NOTINVEHICLE"] = "Hide in Vehicle"
 L["UIPANEL_SPEC"] = "Dual Spec"
 L["UIPANEL_TREE"] = "Talent Tree"
 L["UIPANEL_TREE_DESC"] = "Check to allow this group to show when this talent tree is active, or uncheck to cause it to hide when it is not active."
+L["UIPANEL_PTSINTAL"] = "Points in talent"
 L["UIPANEL_PRIMARYSPEC"] = "Primary Spec"
 L["UIPANEL_SECONDARYSPEC"] = "Secondary Spec"
 L["UIPANEL_GROUPRESET"] = "Reset Position"
